log
Thu 21 Mar 2024 08:12:21 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1b75ee5
Thu 21 Mar 2024 08:14:22 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:11: error: comparison between pointer and integer [-Werror]
   48 |   while(i <= 10)
      |           ^~
exercises.c:52:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   52 |     *numeros = i;
      |              ^
exercises.c:48:11: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   48 |   while(i <= 10)
      |         ~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
ea711fa
Thu 21 Mar 2024 08:14:46 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   52 |     *numeros = i;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
a15749d
Thu 21 Mar 2024 08:18:48 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  1|4
total_score: 10/70
60217b5
Thu 21 Mar 2024 08:21:55 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8c96601
Thu 21 Mar 2024 08:25:10 PM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
080b2f9
Thu 21 Mar 2024 08:29:30 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  4|1
total_score: 50/70
03c2b9e
Thu 21 Mar 2024 08:39:49 PM UTC: 
 exercises.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:124:7: error: unused variable ‘talla’ [-Werror=unused-variable]
  124 |   int talla = 0;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
3c1babf
